# blocknet-tauri

./: .gitignore  Makefile  README.md  api_openapi.json  build.bat  index.html  main.js  package-lock.json  package.json  styles.css
.githooks/: pre-commit
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
flatpak/: com.blocknet.wallet.yml
scripts/: customize-dmg.sh  dmg-install-instructions.txt  sync-daemon-version.js  update-core-binaries.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
